Fixed some whitespaces

--- a/sample.html
+++ b/sample.html
@@ -45,7 +45,7 @@
             <img src="http://lorempixel.com/200/200/" />
             <div>
                 <h4>Lorem Ipsum</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh </p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
             </div>
         </div>
 
